# test-mint-bug

./: Anchor.toml
programs/mint-bug/: Cargo.toml
programs/mint-bug/src/: lib.rs
programs/mint-bug/tests/: mint.rs
tests/: mint-bug.ts
