[package]
name = "mint-bug"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_bug"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"

[dev-dependencies]
solana-sdk = "1.10.29"
spl-associated-token-account = "1.0.5"
solana-test-framework = { git = "https://github.com/halbornteam/solana-test-framework", features = ["anchor"], branch = "solana1.10" }
